Azure_Kubernetes/3-tier_AKS/GetTasksTodoMicroservice/manifests/azurerm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-tasks
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: get-tasks
  template:
    metadata:
      labels:
        app: get-tasks
    spec:
      containers:
      - name: get-tasks
        image: imdevacr89.azurecr.io/backend-gettask:v1
        ports:
        - containerPort: 8000
