Azure_Kubernetes/3-tier_AKS/GetTasksTodoMicroservice/manifests/azurerm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-tasks-ingress
  # annotations:
  #   kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: nginx
  rules:
  - host: get.inframellow.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-tasks
            port: 
              number: 80
